# comfywm

./: .gitignore  .gitlab-ci.yml  .gitmodules  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  Makefile  Makefile.toml  README.md  TODO.md  build.rs  log.txt  rustfmt.toml
config/: global.toml  keybindings.toml  theme.toml
data/: comfy.desktop  comfywm.1
doc/: Comfy Window Manager.tex
doc/sources/: global.toml  keybindings.toml  theme.toml
scripts/: run_dev.sh
scripts/ubuntu/: dependencies.txt  install_dependencies.sh  install_ubuntu_dependencies.sh
src/: compositor.rs  input.rs  lib.rs  main.rs  output.rs  shell.rs  state.rs  surface.rs
src/comfy/: main.rs
src/comfy/compositor/: mod.rs  output.rs  shell.rs  surface.rs  window.rs  workspace.rs
src/comfy/compositor/commands/: interpreter.rs  mod.rs
src/comfy/config/: global.rs  keybinding.rs  mod.rs  parser.rs  theme.rs
src/comfy/input/: cursor.rs  keyboard.rs  mod.rs  pointer.rs
src/comfy/layout/: mod.rs
src/comfy/utils/: animation.rs  area_animation.rs  graphics.rs  handle_helper.rs  logger.rs  mod.rs  time.rs
src/comfy/windows/: layout.rs  mod.rs
src/common/: colors.rs  command_type.rs  lib.rs
src/compositor/: mod.rs  output.rs  shell.rs
src/config/: parser.rs
src/input/: cursor.rs  keyboard.rs  mod.rs  seat.rs
