[package]
name = "comfywm"
description = "..."
version = "0.1.0"
documentation = "..."
homepage = "..."
repository = "..."
authors = ["dubd2206 <daniel-junior.dube@usherbrooke.ca>", "chaf2717 <felix.chabot@usherbrooke.ca>"]
build = "build.rs"
readme = "README.md"
license-file = "LICENSE"
keywords = ["window managers", "desktop", "wm", "linux", "interface"]
categories = ["os"]

[lib]
name = "common"
path = "src/common/lib.rs"

[[bin]]
name = "comfywm"
path = "src/comfy/main.rs"

[dependencies]
toml = "0.4.8"
wlroots = { path = "./lib/wlroots-rs" }
libc = "0.2.43"
