[package]
name = "comfywm"
description = "..."
version = "0.1.0"
documentation = "..."
homepage = "..."
repository = "..."
authors = ["dubd2206 <daniel-junior.dube@usherbrooke.ca>", "chaf2717 <felix.chabot@usherbrooke.ca>"]
readme = "README.md"
license-file = "LICENSE"
keywords = ["window managers", "desktop", "wm", "linux", "interface"]
categories = ["os"]

[lib]
name = "common"
path = "src/common/lib.rs"

[[bin]]
name = "comfywm"
path = "src/comfy/main.rs"

[dependencies]
toml = "0.4.8"
serde = "1.0.80"
serde_derive = "1.0.80"
wlroots = { path = "./lib/wlroots-rs" }
libc = "0.2.43"
log = "0.4.0"
log4rs = "0.8.1"
chrono = "0.4.6"
strum = "0.11.0"
strum_macros = "0.11.0"
